feat: add contract for doppelkopf, adapt controller
